--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -3,3 +3,18 @@
   width: 100%;
   height: 100%;
 }
+
+.room--card {
+  margin: 2rem;
+  width: 15rem;
+  height: 10rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  position: relative;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  padding: 1rem 0.5rem;
+  border-radius: 1rem;
+  cursor: pointer;
+}
