--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -3,6 +3,7 @@
   width: 5rem;
   box-shadow: 1rem 1rem 1rem var(--color-grey-bg);
   padding-top: 1.5rem;
+  background: white;
   /* border: 0.5px solid var(--color-grey); */
 }
 
