--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,7 +1,11 @@
 .Home {
-  padding-top: 0.5rem;
+  padding: 0.5rem 0;
   width: 100%;
   height: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(17rem, 1fr));
+  align-items: center;
+  justify-items: center;
 }
 
 .room--card {
