--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -2,6 +2,14 @@
   padding: 0.5rem 0;
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.active--rooms,
+.upcoming--rooms {
+  width: 100%;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(17rem, 1fr));
   align-items: center;
@@ -21,4 +29,8 @@
   padding: 1rem 0.5rem;
   border-radius: 1rem;
   cursor: pointer;
+}
+
+.room--card h1 {
+  font-size: 1rem;
 }
