--- a/src/pages/ChatRoom/Chatroom.css
+++ b/src/pages/ChatRoom/Chatroom.css
@@ -101,6 +101,61 @@
   height: 4rem;
 }
 
+/*modal*/
+.modal-err {
+  /* display: "none"; */
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  z-index: 999999;
+  background-color: rgba(12, 20, 12, 0.8);
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  width: 100%;
+  height: 100%;
+  max-width: 600px;
+  max-height: 200px;
+  background-color: white;
+  margin: 0.5rem;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.modal-title {
+}
+.modal-title h2 {
+  margin: 0;
+}
+.modal-description {
+}
+.modal-btn-container {
+  display: flex;
+  justify-content: space-around;
+}
+.modal-btn-container .btn {
+  width: 50%;
+}
+
+.reply-to-menu {
+  display: none;
+  position: absolute;
+  z-index: 999;
+  top: 2rem;
+  right: 2rem;
+  padding: 1rem;
+  width: 100vw;
+  max-width: 300px;
+  background-color: white;
+  box-shadow: 8px 8px 16px #d9d9d9, -8px -8px 16px #ffffff;
+}
+
 @media only screen and (max-width: 500px) {
   .chat--details {
     width: 100%;
