--- a/src/pages/ChatRoom/Chatroom.css
+++ b/src/pages/ChatRoom/Chatroom.css
@@ -156,6 +156,17 @@
   box-shadow: 8px 8px 16px #d9d9d9, -8px -8px 16px #ffffff;
 }
 
+.reply--msg--input {
+  background-color: #f0f0f0;
+  height: 4rem;
+  display: flex;
+  align-items: center;
+  padding: 0 1rem;
+  position: fixed;
+  bottom: 4rem;
+  width: 90%;
+}
+
 @media only screen and (max-width: 500px) {
   .chat--details {
     width: 100%;
