refactor & docs: refactored layouts of some pages and added a doc

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
   --text-color: #1f2937;
   --text-dark-color: #f3f4f6;
 
-  --color-primary: #1da1f2; /*#06b100; /* #33cccc; */
+  --color-primary: #97bd30; /*#06b100; /* #33cccc; */
   --color-primary-dark: #012300; /* #0a2929; */
   --color-primary-bg: #b4e8b3; /* #d4ffff; */
   /* --color-secondary: #3b82f6;
