--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -4,6 +4,9 @@
   box-shadow: 1rem 1rem 1rem var(--color-grey-bg);
   padding-top: 1.5rem;
   background: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   /* border: 0.5px solid var(--color-grey); */
 }
 
