--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -14,6 +14,7 @@
   grid-template-columns: repeat(auto-fit, minmax(17rem, 1fr));
   align-items: center;
   justify-items: center;
+  min-height: 40%;
 }
 
 .room--card {
@@ -33,4 +34,10 @@
 
 .room--card h1 {
   font-size: 1rem;
+}
+
+@media only screen and (max-width: 500px) {
+  .active--title {
+    font-size: 1.5rem;
+  }
 }
