--- a/src/pages/Welcome/Welcome.css
+++ b/src/pages/Welcome/Welcome.css
@@ -4,4 +4,23 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.Welcome h1 {
+  font-size: 4rem;
+  font-weight: 700;
+}
+
+.Welcome .btn {
+  width: 250px;
+  text-align: center;
+}
+
+@media only screen and (max-width: 500px) {
+  .Welcome h1 {
+    font-size: 2.5rem;
+    font-weight: 900;
+  }
 }
